--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,6 @@
 ﻿<Project>
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
+		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 </Project>
