--- a/src/Crossroads.Launcher/Crossroads.Launcher.csproj
+++ b/src/Crossroads.Launcher/Crossroads.Launcher.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
+		<OutputType>Exe</OutputType>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 		<RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
 		<SelfContained>true</SelfContained>
@@ -11,10 +12,10 @@
 	  <Compile Include="..\Crossroads\Services\ProcessService.cs" Link="Services\ProcessService.cs" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
-		<PackageReference Include="System.CommandLine.Hosting" Version="0.3.0-alpha.20574.7" />
-		<PackageReference Include="System.IO.Abstractions" Version="17.2.3" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="$(MicrosoftExtensionsHostingVersion)" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="$(MicrosoftExtensionsConfigurationVersion)" />
+		<PackageReference Include="System.CommandLine.Hosting" Version="$(SystemCommandLineHostingVersion)" />
+		<PackageReference Include="System.IO.Abstractions" Version="$(SystemIOAbstractionsVersion)" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Update="appsettings.json">
