--- a/test/Crossroads.Test/Crossroads.Test.csproj
+++ b/test/Crossroads.Test/Crossroads.Test.csproj
@@ -19,7 +19,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Moq" Version="$(MoqVersion)" />
-		<PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="$(SystemIOAbstractionsTestingHelpersVersion)" />
+		<PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="$(TestableIOSystemIOAbstractionsTestingHelpersVersion)" />
 	</ItemGroup>
 
 	<ItemGroup>
