--- a/test/Crossroads.Launcher.Test/Crossroads.Launcher.Test.csproj
+++ b/test/Crossroads.Launcher.Test/Crossroads.Launcher.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 	</PropertyGroup>
@@ -25,8 +25,8 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Moq" Version="$(MoqVersion)" />
-		<PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="$(SystemIOAbstractionsTestingHelpersVersion)" />
-	</ItemGroup>
+    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="$(TestableIOSystemIOAbstractionsTestingHelpersVersion)" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<None Update="assets\**">
