pathPrefix in build

--- a/site/package.json
+++ b/site/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "develop": "gatsby develop -H 0.0.0.0",
     "start": "gatsby develop -H 0.0.0.0",
-    "build": "gatsby clean && gatsby build && npm run pub",
+    "build": "gatsby clean && gatsby build --prefix-paths && npm run pub",
     "serve": "gatsby serve",
     "pub": "rm -rf ../docs && mv public ../docs",
     "clean": "gatsby clean"
