--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,17 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "monthly"
+
+  - package-ecosystem: npm
+    directory: /site
+    schedule:
+      interval: "monthly"
+
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: "monthly"
+    groups:
+      artifact-actions:
+        patterns:
+        - "actions/*-artifact"  # Upload/Download usually need to be updated together
