--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,11 @@ updates:
     directory: /site
     schedule:
       interval: "monthly"
+    groups:
+      gatsby:
+        patterns:
+        - "*gatsby*/*"
+        - "*/*gatsby*"
 
   - package-ecosystem: github-actions
     directory: /
