One more try for grouping gatsby

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,6 +19,7 @@ updates:
         patterns:
         - "*gatsby*/*"
         - "*/*gatsby*"
+        - "gatsby*"
 
   - package-ecosystem: github-actions
     directory: /
