--- a/site/package.json
+++ b/site/package.json
@@ -12,12 +12,14 @@
     "npm": "^10.3.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@mdx-js/react": "^2.3.0",
+    "@mui/material": "^5.16.6",
     "gatsby": "^5.13.7",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-mdx": "^5.13.1",
-    "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-plugin-webfonts": "^2.3.2",
@@ -32,8 +34,13 @@
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
     "style-to-object": "^1.0.6"
+  },
+  "overrides": {
+    "gatsby": {
+      "axios": "^1.2.1",
+      "webpack-dev-middleware": "^5.3.4"
+    }
   },
   "scripts": {
     "develop": "gatsby develop -H 0.0.0.0",
@@ -41,9 +48,17 @@
     "build": "gatsby clean && gatsby build --prefix-paths && npm run pub",
     "serve": "gatsby serve",
     "pub": "rm -rf ../docs && mv public ../docs",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "test": "jest"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "babel-jest": "^29.7.0",
+    "babel-preset-gatsby": "^3.13.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3"
   }
 }
