--- a/.github/workflows/pr-build-site.yml
+++ b/.github/workflows/pr-build-site.yml
@@ -11,6 +11,7 @@ defaults:
 
 permissions:
   contents: read
+  packages: read
 
 jobs:
   build:
@@ -21,8 +22,10 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
         with:
-          node-version: 20
-          cache: 'npm'
-          cache-dependency-path: './site/package-lock.json'
+          node-version: '20.x'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@morganstanley'
       - run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: npm run build
