--- a/site/package.json
+++ b/site/package.json
@@ -7,38 +7,11 @@
   "keywords": [
     "gatsby"
   ],
-  "engines": {
-    "node": "^20.11.0",
-    "npm": "^10.3.0"
-  },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.14.0",
-    "@mdx-js/react": "^2.3.0",
-    "@mui/material": "^6.3.0",
-    "gatsby": "^5.14.1",
-    "gatsby-plugin-image": "^3.14.0",
-    "gatsby-plugin-manifest": "^5.14.0",
-    "gatsby-plugin-mdx": "^5.14.0",
-    "gatsby-plugin-sharp": "^5.14.0",
-    "gatsby-plugin-sitemap": "^6.14.0",
-    "gatsby-plugin-webfonts": "^2.3.2",
-    "gatsby-remark-autolink-headers": "^6.14.0",
-    "gatsby-remark-copy-linked-files": "^6.14.0",
-    "gatsby-remark-images": "^7.14.0",
-    "gatsby-remark-prismjs": "^7.14.0",
-    "gatsby-remark-responsive-iframe": "^6.14.0",
-    "gatsby-remark-smartypants": "^6.14.0",
-    "gatsby-source-filesystem": "^5.14.0",
-    "gatsby-transformer-sharp": "^5.14.0",
-    "prismjs": "^1.29.0",
+    "@morganstanley/gatsby-theme-ms-gh-pages": "^1.0.1",
+    "gatsby": "^5.13.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "style-to-object": "^1.0.8"
-  },
-  "overrides": {
-    "axios": "^1.7.4",
-    "webpack-dev-middleware": "^5.3.4"
+    "react-dom": "^18.3.1"
   },
   "scripts": {
     "develop": "gatsby develop -H 0.0.0.0",
@@ -50,13 +23,13 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "babel-jest": "^29.7.0",
     "babel-preset-gatsby": "^3.13.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.4.2"
+    "prettier": "^3.3.3"
   }
 }
