--- a/site/package.json
+++ b/site/package.json
@@ -8,8 +8,8 @@
     "gatsby"
   ],
   "dependencies": {
-    "@morganstanley/gatsby-theme-ms-gh-pages": "^1.0.1",
-    "gatsby": "^5.13.7",
+    "@morganstanley/gatsby-theme-ms-gh-pages": "^1.0.2",
+    "gatsby": "^5.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -18,18 +18,11 @@
     "start": "gatsby develop -H 0.0.0.0",
     "build": "gatsby clean && gatsby build --prefix-paths && npm run pub",
     "serve": "gatsby serve",
-    "pub": "rm -rf ../docs && mv public ../docs",
-    "clean": "gatsby clean",
-    "test": "jest"
+    "pub": "rimraf ../docs && mv public ../docs",
+    "clean": "gatsby clean"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
-    "babel-jest": "^29.7.0",
-    "babel-preset-gatsby": "^3.13.2",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1"
   }
 }
