Add dev dependency and ignore docs build output dir

--- a/site/package.json
+++ b/site/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "prettier": "^3.6.2",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "@parcel/watcher": "^2.5.1"
   }
 }
