--- a/site/package.json
+++ b/site/package.json
@@ -8,7 +8,7 @@
     "gatsby"
   ],
   "dependencies": {
-    "@morganstanley/gatsby-theme-ms-gh-pages": "^1.0.2",
+    "@morganstanley/gatsby-theme-ms-gh-pages": "^1.1.1",
     "gatsby": "^5.14.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "prettier": "^3.6.2",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "@parcel/watcher": "^2.5.1"
   }
 }
